<resources>
    <string name="app_name">ConversieImagineText</string>
    <string name="start_reading">"Începeți citirea "</string>
    <string name="txt">"Format text "</string>
    <string name="pdf">"Format pdf "</string>
    <string name="formatDorit">"În ce format doriți să fie salvat textul? "</string>
    <string name="conv">"Convertiți "</string>
    <string name="photo">"Scanați "</string>
    <string name="back">"Înapoi la pagina anterioară "</string>
    <string name="mail">"Trimiteți pe mail "</string>






</resources>
